--- a/projects/windows/VisualStudio/VisualStudio-2008/libvedere/libvedere.vcproj
+++ b/projects/windows/VisualStudio/VisualStudio-2008/libvedere/libvedere.vcproj
@@ -24,7 +24,7 @@
 			OutputDirectory="$(VEDERE_LIB)"
 			IntermediateDirectory="$(VEDERE_OBJ)"
 			ConfigurationType="4"
-			InheritedPropertySheets="..\vedere-vcversion.vsprops;..\..\vedere.vsprops"
+			InheritedPropertySheets="..\vcversion.vsprops;..\..\vcproj.vsprops;..\..\zlib.vsprops;..\..\libraw.vsprops;..\..\nadir.vsprops;..\..\lamna.vsprops;..\..\vedere.vsprops"
 			CharacterSet="1"
 			>
 			<Tool
@@ -46,7 +46,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="$(VEDERE_INCLUDE_DIRS)"
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;$(VEDERE_DEBUG_DEFINES)"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -83,13 +83,12 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release|Win32"
+			Name="Debug|x64"
 			OutputDirectory="$(VEDERE_LIB)"
 			IntermediateDirectory="$(VEDERE_OBJ)"
 			ConfigurationType="4"
-			InheritedPropertySheets="..\vedere-vcversion.vsprops;..\..\vedere.vsprops"
+			InheritedPropertySheets="..\vcversion.vsprops;..\..\vcproj.vsprops;..\..\zlib.vsprops;..\..\libraw.vsprops;..\..\nadir.vsprops;..\..\lamna.vsprops;..\..\vedere.vsprops"
 			CharacterSet="1"
-			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -105,15 +104,16 @@
 			/>
 			<Tool
 				Name="VCMIDLTool"
+				TargetEnvironment="3"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
-				EnableIntrinsicFunctions="true"
+				Optimization="0"
 				AdditionalIncludeDirectories="$(VEDERE_INCLUDE_DIRS)"
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
-				RuntimeLibrary="0"
-				EnableFunctionLevelLinking="true"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;$(VEDERE_DEBUG_DEFINES)"
+				MinimalRebuild="true"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="3"
@@ -147,12 +147,13 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Debug|x64"
+			Name="Release|Win32"
 			OutputDirectory="$(VEDERE_LIB)"
 			IntermediateDirectory="$(VEDERE_OBJ)"
 			ConfigurationType="4"
-			InheritedPropertySheets="..\vedere-vcversion.vsprops;..\..\vedere.vsprops"
+			InheritedPropertySheets="..\vcversion.vsprops;..\..\vcproj.vsprops;..\..\zlib.vsprops;..\..\libraw.vsprops;..\..\nadir.vsprops;..\..\lamna.vsprops;..\..\vedere.vsprops"
 			CharacterSet="1"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -168,16 +169,15 @@
 			/>
 			<Tool
 				Name="VCMIDLTool"
-				TargetEnvironment="3"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="0"
+				Optimization="2"
+				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="$(VEDERE_INCLUDE_DIRS)"
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
-				MinimalRebuild="true"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;$(VEDERE_DEBUG_DEFINES)"
+				RuntimeLibrary="0"
+				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="3"
@@ -215,7 +215,7 @@
 			OutputDirectory="$(VEDERE_LIB)"
 			IntermediateDirectory="$(VEDERE_OBJ)"
 			ConfigurationType="4"
-			InheritedPropertySheets="..\vedere-vcversion.vsprops;..\..\vedere.vsprops"
+			InheritedPropertySheets="..\vcversion.vsprops;..\..\vcproj.vsprops;..\..\zlib.vsprops;..\..\libraw.vsprops;..\..\nadir.vsprops;..\..\lamna.vsprops;..\..\vedere.vsprops"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
 			>
@@ -240,7 +240,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="$(VEDERE_INCLUDE_DIRS)"
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;$(VEDERE_DEBUG_DEFINES)"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
